[tool.poetry]
name = "blockertest"
version = "0.1.0"
description = ""
authors = ["Alaqrakhadija <alaqrakhadija@gmail.com>"]
readme = "README.md"
packages = [{include = "blockertest"}]
[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blockertest = "blockertest.main:app"
[tool.semantic_release]
version_variable = "setup.py:__version__"
upload_to_pypi = true

[tool.semantic_release.upload_to_pypi]
repository = "https://upload.pypi.org/legacy/"

[tool.semantic_release.plugins]
pre_commit = ["@semantic-release/changelog", "@semantic-release/git"]
post = "@semantic-release/github"

[tool.semantic_release.plugins.analyzeCommits]
preset = "angular"
minor_keywords = ["feat"]
patch_keywords = ["fix"]